Feat: Added support to toggle app icons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,11 +31,12 @@
 	<string name="settings_title_gestures">Gestures</string>
 	<string name="settings_title_others">Others</string>
 
-	<string name="settings_appearance_statue_bar">Show Statue Bar</string>
+	<string name="settings_appearance_status_bar">Show Status Bar</string>
 	<string name="settings_appearance_date">Show Date</string>
 	<string name="settings_appearance_time">Show Time</string>
 	<string name="settings_appearance_battery">Show Battery</string>
 	<string name="settings_appearance_daily_word">Show Daily Word</string>
+	<string name="settings_appearance_app_icons_word">Show App Icons</string>
 
 	<string name="settings_appearance_text_size_title">Size</string>
 	<string name="settings_appearance_color_title">Color</string>
