--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -27,7 +27,7 @@
 	<string name="settings_title_app_manager">App Manage</string>
 	<string name="settings_title_gestures">Gestures</string>
 	<string name="settings_title_others">Others</string>
-	<string name="settings_appearance_statue_bar">Show Statue Bar</string>
+	<string name="settings_appearance_status_bar">Show Status Bar</string>
 	<string name="settings_appearance_date">Show Date</string>
 	<string name="settings_appearance_time">Show Time</string>
 	<string name="settings_appearance_battery">Show Battery</string>
