--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,23 +31,20 @@
 	<string name="settings_title_gestures">Gestures</string>
 	<string name="settings_title_others">Others</string>
 
-	<string name="settings_appearance_status_bar">Show Status Bar</string>
-	<string name="settings_appearance_date">Show Date</string>
-	<string name="settings_appearance_time">Show Time</string>
-	<string name="settings_appearance_battery">Show Battery</string>
-	<string name="settings_appearance_daily_word">Show Daily Word</string>
-	<string name="settings_appearance_app_icons_word">Show App Icons</string>
+	<string name="settings_display_status_bar">Show Status Bar</string>
+	<string name="settings_display_date">Show Date</string>
+	<string name="settings_display_time">Show Time</string>
+	<string name="settings_display_battery">Show Battery</string>
+	<string name="settings_display_daily_word">Show Daily Word</string>
+	<string name="settings_display_app_icons">Show App Icons</string>
+	<string name="settings_display_automatic_keyboard">Auto Show Keyboard</string>
+	<string name="settings_display_auto_open_apps">Auto Open Last App</string>
 
 	<string name="settings_appearance_text_size_title">Size</string>
 	<string name="settings_appearance_color_title">Color</string>
 	<string name="settings_appearance_alignment_title">Alignment</string>
 	<string name="settings_appearance_padding_title">Padding</string>
 
-	<string name="settings_appearance_date_color">Select Date Color</string>
-	<string name="settings_appearance_time_color">Select Time Color</string>
-	<string name="settings_appearance_battery_color">Select Battery Color</string>
-	<string name="settings_appearance_daily_word_color">Select Daily Word Color</string>
-	<string name="settings_appearance_app_display_color">Select App Color</string>
 	<string name="settings_appearance_date_size_title">Date Size : </string>
 	<string name="settings_appearance_time_size_title">Time Size : </string>
 	<string name="settings_appearance_app_size_title">App Size : </string>
