--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -75,8 +75,7 @@
 	<string name="accessibility_settings_title">Eingabehilfen-Einstellungen</string>
 	<string name="accessibility_settings_enable">Aktivieren</string>
 	<string name="accessibility_settings_disable">Deaktivieren</string>
-	<string name="accessibility_service_desc">Bitte aktivieren Sie den Eingabehilfedienst, um die Funktion „Doppeltippen zum Sperren“ im Aster Launcher zu verwenden.\n\nDiese Berechtigung
-    wird nur verwendet, um Ihren Bildschirm auszuschalten. Unser Eingabehilfedienst sammelt oder gibt keine Daten weiter.</string>
+	<string name="accessibility_service_desc">Bitte aktivieren Sie den Eingabehilfedienst, um die Funktion „Doppeltippen zum Sperren“ im Aster Launcher zu verwenden.\n\nDiese Berechtigung wird nur verwendet, um Ihren Bildschirm auszuschalten. Unser Eingabehilfedienst sammelt oder gibt keine Daten weiter.</string>
 	<string name="receiver_name">Sperrbildschirmsperre</string>
 	<!-- Message displayed to the user by system during authorization-->
 	<!-- Small description inside Device Administrator Setting -->
