--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -75,8 +75,7 @@
 	<string name="accessibility_settings_title">הגדרות נגישות</string>
 	<string name="accessibility_settings_enable">לְאַפשֵׁר</string>
 	<string name="accessibility_settings_disable">השבת</string>
-	<string name="accessibility_service_desc">אנא הפעל את שירות הנגישות כדי להשתמש בתכונת הקשה כפולה כדי לנעול ב-Aster Launcher.\n\nהרשאה זו
-    משמשת רק כדי לכבות את המסך שלך. שירות הנגישות שלנו אינו אוסף או משתף נתונים כלשהם.</string>
+	<string name="accessibility_service_desc">אנא הפעל את שירות הנגישות כדי להשתמש בתכונת הקשה כפולה כדי לנעול ב-Aster Launcher.\n\nהרשאה זו משמשת רק כדי לכבות את המסך שלך. שירות הנגישות שלנו אינו אוסף או משתף נתונים כלשהם.</string>
 	<string name="receiver_name">נעילה - לוקר מסך</string>
 	<!-- Message displayed to the user by system during authorization-->
 	<!-- Small description inside Device Administrator Setting -->
