--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -549,4 +549,12 @@
 		<item>Center</item>
 		<item>Right</item>
 	</string-array>
+
+	<string name="search_engine">Search Engine</string>
+	<string name="search_google">Google</string>
+	<string name="search_yahoo">Yahoo</string>
+	<string name="search_duckduckgo">DuckDuckGo</string>
+	<string name="search_bing">Bing</string>
+	<string name="search_brave">Brave</string>
+	<string name="search_swisscow">SwissCows</string>
 </resources>
