--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -75,8 +75,8 @@
 	<string name="accessibility_settings_title">Eingabehilfen-Einstellungen</string>
 	<string name="accessibility_settings_enable">Aktivieren</string>
 	<string name="accessibility_settings_disable">Deaktivieren</string>
-	<string name="accessibility_service_desc">Please turn on accessibility service to use double tap to lock feature in Easy Launcher.\n\nThis permission is used only to turn off your screen.Our accessibility service does not collect or share any data.</string>
-	<string name="admin_permission_message">Easy launcher promises to use lock screen permission responsibly. Easy launcher does not collect or share any data.</string>
+	<string name="accessibility_service_desc">Bitte aktivieren Sie den Eingabehilfedienst, um die Funktion „Doppeltippen zum Sperren“ im Easy Launcher zu verwenden.\n\nDiese Berechtigung wird nur verwendet, um Ihren Bildschirm auszuschalten. Unser Eingabehilfedienst sammelt oder gibt keine Daten weiter.</string>
+	<string name="admin_permission_message">Easy Launcher verspricht, die Sperrbildschirmberechtigung verantwortungsvoll zu nutzen. Easy Launcher sammelt oder gibt keine Daten weiter.</string>
 	<string-array name="settings_appearance_daily_word_default">
 		<item>Bleiben Sie widerstandsfähig!</item>
 		<item>Du schaffst das!</item>
@@ -533,4 +533,11 @@
 		<item>Mitte</item>
 		<item>Rechts</item>
 	</string-array>
+	<string name="search_engine">Suchmaschine</string>
+	<string name="search_google">Google</string>
+	<string name="search_yahoo">Yahoo</string>
+	<string name="search_duckduckgo">DuckDuckGo</string>
+	<string name="search_bing">Bing</string>
+	<string name="search_brave">Mutig</string>
+	<string name="search_swisscow">Schweizer Kühe</string>
 </resources>
