--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -75,8 +75,8 @@
 	<string name="accessibility_settings_title">הגדרות נגישות</string>
 	<string name="accessibility_settings_enable">לְאַפשֵׁר</string>
 	<string name="accessibility_settings_disable">השבת</string>
-	<string name="accessibility_service_desc">Please turn on accessibility service to use double tap to lock feature in Easy Launcher.\n\nThis permission is used only to turn off your screen.Our accessibility service does not collect or share any data.</string>
-	<string name="admin_permission_message">Easy launcher promises to use lock screen permission responsibly. Easy launcher does not collect or share any data.</string>
+	<string name="accessibility_service_desc">הפעל את שירות הנגישות כדי להשתמש בתכונת הקשה כפולה כדי לנעול ב- Easy Launcher.\n\nהרשאה זו משמשת רק כדי לכבות את המסך שלך. שירות הנגישות שלנו אינו אוסף או משתף נתונים כלשהם.</string>
+	<string name="admin_permission_message">משגר קל מבטיח להשתמש בהרשאת מסך הנעילה באחריות. משגר קל אינו אוסף או משתף נתונים כלשהם.</string>
 	<string-array name="settings_appearance_daily_word_default">
 		<item>הישאר עמיד!</item>
 		<item>יש לך את זה!</item>
@@ -533,4 +533,11 @@
 		<item>מֶרְכָּז</item>
 		<item>ימין</item>
 	</string-array>
+	<string name="search_engine">מנוע חיפוש</string>
+	<string name="search_google">גוגל</string>
+	<string name="search_yahoo">יאהו</string>
+	<string name="search_duckduckgo">DuckDuckGo</string>
+	<string name="search_bing">בינג</string>
+	<string name="search_brave">אַמִיץ</string>
+	<string name="search_swisscow">SwissCows</string>
 </resources>
