--- a/app/src/main/res/values-sk-rSK/strings.xml
+++ b/app/src/main/res/values-sk-rSK/strings.xml
@@ -75,8 +75,8 @@
 	<string name="accessibility_settings_title">Nastavenia dostupnosti</string>
 	<string name="accessibility_settings_enable">Povoliť</string>
 	<string name="accessibility_settings_disable">Zakázať</string>
-	<string name="accessibility_service_desc">Please turn on accessibility service to use double tap to lock feature in Easy Launcher.\n\nThis permission is used only to turn off your screen.Our accessibility service does not collect or share any data.</string>
-	<string name="admin_permission_message">Easy launcher promises to use lock screen permission responsibly. Easy launcher does not collect or share any data.</string>
+	<string name="accessibility_service_desc">Ak chcete použiť funkciu uzamknutia dvojitým klepnutím v aplikácii Easy Launcher, zapnite službu dostupnosti.\n\nToto povolenie sa používa iba na vypnutie obrazovky. Naša služba dostupnosti nezhromažďuje ani nezdieľa žiadne údaje.</string>
+	<string name="admin_permission_message">Easy launcher sľubuje zodpovedné používanie povolenia na uzamknutie obrazovky. Easy launcher nezhromažďuje ani nezdieľa žiadne údaje.</string>
 	<string-array name="settings_appearance_daily_word_default">
 		<item>Zostaňte odolní!</item>
 		<item>Máš to!</item>
@@ -533,4 +533,11 @@
 		<item>centrum</item>
 		<item>Správny</item>
 	</string-array>
+	<string name="search_engine">Vyhľadávač</string>
+	<string name="search_google">Google</string>
+	<string name="search_yahoo">Yahoo</string>
+	<string name="search_duckduckgo">DuckDuckGo</string>
+	<string name="search_bing">Bing</string>
+	<string name="search_brave">Statočný</string>
+	<string name="search_swisscow">SwissCows</string>
 </resources>
