--- a/app/src/main/res/values-sk-rSK/strings.xml
+++ b/app/src/main/res/values-sk-rSK/strings.xml
@@ -25,7 +25,7 @@
     <string name="bottom_dialog_app_info">Informácie o aplikácii</string>
     <string name="bottom_dialog_app_uninstall">Odinštalovať aplikáciu</string>
     <string name="settings_name">Nastavenia spúšťača</string>
-    <string name="settings_version">%s Verzia: %s</string>
+    <string name="settings_version">%1$s Verzia: %2$s</string>
     <string name="settings_title_home_display_preferences">Displej</string>
     <string name="settings_title_home_behavior_preferences">Správanie</string>
     <string name="settings_title_home_appearance_preferences">Vzhľad</string>
